# segmentation-playground

./: .gitignore  README.md  pyproject.toml
scripts/: README_DATASET_SETUP.md  convert_voc_to_coco.sh  fetch_dataset.sh  get_dataset_info.sh  run_inference_app.sh  run_visualizer.sh  visualize_dataset.py  voc_to_coco.py
segmentation/: augmentation.py  data_splits.py  dataset.py  evaluate.py  inference.py  model.py  train.py  train_person.py
segmentation/pytorch/: README.md  __init__.py  augmentations.py  config.yaml  hyperparameter_tuner.py  model.py  model_inference_app.py  plot_training_results.py  run_training.py  train.py  unet_inference_app.py
segmentation/ultralytics/: convert_detection_to_segmentation.py  convert_voc_to_yolo.py  evaluate.py  hyperparameter_tuner.py  model_inference_app.py  predict.py  train.py  visualize_dataset.py
